Fixes the spacing of mage ability. (#35)

--- a/app/assets/stylesheets/mages.scss
+++ b/app/assets/stylesheets/mages.scss
@@ -15,6 +15,7 @@
 }
 
 .mage-ability {
+  white-space: pre-line;
   font-size: 12px;
   margin: 0 20px;
   height: 115px;
