--- a/app/assets/stylesheets/randomizer.scss
+++ b/app/assets/stylesheets/randomizer.scss
@@ -126,6 +126,7 @@ h2 {
 
 .randomizer-mage-ability {
   margin-left: 10px;
+  white-space: pre-line;
 }
 
 h3 {
